samples/_failures_safe/1761223945_ef9ca5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5ba8eb0.c: In function ‘main’:
./samples/SAFE/__tmp_d5ba8eb0.c:142:5: error: expected declaration or statement at end of input
  142 |     printf("\nFiltered logs for %s:\n", level_to_string(filter_level));
      |     ^~~~~~
